# Discord-bot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  env.production.example
.cursor/plans/: convert-0ad1af5e.plan.md  price-4fc6b7b6.plan.md
.github/workflows/: release.yml
Lambda-bot/: Cargo.toml
Lambda-bot/src/: lib.rs  main.rs
Lambda-bot/src/automation/: price.rs
Lambda-bot/test/: price_stream.rs
build-docs/stacks-bot-docs/json_output/: news_output.json
docs/models/: earnings.md  fundamentals.md  holders.md  news.md  quotes.md
docs/service/commands/: earnings.md  fundamentals.md
src/: main.rs
src/models/: earnings.rs  mod.rs  news.rs
src/service/: mod.rs
src/service/automation/earnings/: after_daily_report.rs  daily_report.rs  mod.rs  weekly_report.rs
src/service/automation/earnings_calendar/: earnings_reports.rs  mod.rs
src/service/automation/options_data/: mod.rs  spy_data.rs
src/service/caching/: mod.rs  redis.rs
src/service/caching/collections/: mod.rs  price_alerts.rs  spy_data.rs
src/service/command/: earnings.rs  fundamentals.rs  holders.rs  mention.rs  mod.rs  news.rs  quotes.rs
src/service/finance/: earnings.rs  fundamentals.rs  mod.rs  news.rs
tests/: earnings_integration.rs  fundamentals_integration.rs  holders_integration.rs  news_integration.rs
