[package]
name = "Discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord library with all necessary features
serenity = { version = "0.12.4", default-features = false, features = [
    "builder",           
    "cache",         
    "collector",  
    "client",            
    "framework",            
    "gateway",      
    "http", 
    "model",           
    "standard_framework",        
    "utils",            
    "voice",            
    "rustls_backend",
    "chrono",
    "interactions_endpoint",
] }

# Async runtime with all features
tokio = { version = "1.48.0", features = [
    "macros",           # Async macros like #[tokio::main]
    "rt-multi-thread",  # Multi-threaded runtime
    "time",             # Time utilities for delays/intervals
    "sync",             # Synchronization primitives
    "fs",               # Async file operations
] }

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Global singletons
once_cell = "1.19"

# Date/time handling for financial data
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# For WebSocket streaming (real-time quotes)
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# For fetching stock market related data 
finance-query-core = "0.2.1"

# Image rendering for earnings calendar
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.25"
ab_glyph = "0.2"
font-kit = "0.14.3"
