[workspace]
members = [".", "Lambda-bot"]
resolver = "2"

[workspace.dependencies]
serenity = { version = "0.12.4", default-features = false }
tokio = "1.48.0"
reqwest = "0.12"
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15"
dotenvy = "0.15.7"
anyhow = "1.0"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
chrono = "0.4.42"
chrono-tz = "0.10"
tokio-tungstenite = "0.28"
futures-util = "0.3"
finance-query-core = "0.3.0"
image = { version = "0.25", default-features = false }
imageproc = "0.25"
ab_glyph = "0.2"
font-kit = "0.14.3"
base64 = "0.22"
redis = "1.0.0"

[package]
name = "stacks-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord library with all necessary features
serenity = { workspace = true, default-features = false, features = [
    "builder",
    "cache",
    "collector",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "voice",
    "rustls_backend",
    "chrono",
    "interactions_endpoint",
] }

# Async runtime with all features
tokio = { workspace = true, features = [
    "macros",           # Async macros like #[tokio::main]
    "rt-multi-thread",  # Multi-threaded runtime
    "time",             # Time utilities for delays/intervals
    "sync",             # Synchronization primitives
    "fs",               # Async file operations
] }

# HTTP client for API calls
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

# JSON serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Environment variables
dotenv = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Global singletons
once_cell = { workspace = true }

# Date/time handling for financial data
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }

# For WebSocket streaming (real-time quotes)
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
futures-util = { workspace = true }

# For fetching stock market related data 
finance-query-core = { workspace = true }

# Image rendering for earnings calendar
image = { workspace = true, default-features = false, features = ["png", "jpeg"] }
imageproc = { workspace = true }
ab_glyph = { workspace = true }
font-kit = { workspace = true }
base64 = { workspace = true }

# Caching
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
