[package]
name = "Lambda-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { workspace = true, default-features = false, features = [
    "builder",
    "cache",
    "collector",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "voice",
    "rustls_backend",
] }
# Async runtime with all features
tokio = { workspace = true, features = [
    "macros",           # Async macros like #[tokio::main]
    "rt-multi-thread",  # Multi-threaded runtime
    "time",             # Time utilities for delays/intervals
    "sync",             # Synchronization primitives
    "fs",               # Async file operations
] }

dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
finance-query-core = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
futures-util = { workspace = true }

[[test]]
name = "price_stream"
path = "test/price_stream.rs"
